debian-installer (20031227) UNRELEASED; urgency=low

  * Joey Hess
    - i386 will work on 32 mb now, update system requirements in syslinux help
      screen
  * Thiemo Seufer
    - Sanitize mips/mipsel image creation.
  * Vincent Sanders
    - Initial ARM port

 -- Vincent Sanders <vince@debian>  Mon, 29 Dec 2003 13:00:25 +0000

debian-installer (20031226) unstable; urgency=low

  * Thiemo Seufer
    - "make reallyclean" should really clean.
    - Fix build failure, images/ wasn't created.
  * Joey Hess
    - Add fakeroot to build-depends, as the debian/rules uses it in the build
      target. Should fix FTBFS on mips.
    - Don't put docs under images/, so debian-cd will find them.

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Dec 2003 21:15:47 -0500

debian-installer (20031223) unstable; urgency=low

  * Joey Hess
    - Generate bootable hd-media images, not just the initrd.
      These can be written directly the usb memory stick, then mounted
      and a d-i iso copied in. As they're quite big (and sparse),
      they are gzipped.
    - NB: The above change means you need 128+ mb more free space to
      build this package on i386.
    - If System.map is included in the kernel image udeb, pass it to depmod
      via -F and delete it when done. This is to support building on systems
      running 2.6.
    - Remove ide modules stuff from net drivers floppy. I don't know why it
      was there, but its deps were not met and this could cause ugly messages 
      during install.
    - Remove the same ide modules from i386 netboot.
    - Document the bootkbd boot parameter in syslinux f7.txt.
    - Add "expert" mode boot to syslinux, which sets DEBCONF_PRIORITY=low.
    - Include a doc/index.en.html in the install-images tarball, so
      debian-cd will find some documentation and not include the boot floppies
      docs.
    - Include INSTALLATION-HOWTO there too, by way of a gross, gross hack.
    - netcfg reorg
    - scsi-common-modules reorg